--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/resultText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="0"
+        android:text=""
         android:textAlignment="textEnd"
         android:textColor="@color/white"
         android:textSize="45sp"
@@ -273,6 +273,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="100dp"
                 android:layout_margin="2dp"
+                android:onClick="operationClick"
                 android:layout_weight="1"
                 android:background="@drawable/circle"
                 android:gravity="center"
